--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,13 @@
       <scope>test</scope>
     </dependency>
 
-<!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-hdfs -->
+<!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-core -->
 <dependency>
     <groupId>org.apache.hadoop</groupId>
-    <artifactId>hadoop-hdfs</artifactId>
-    <version>3.2.1</version>
+    <artifactId>hadoop-core</artifactId>
+    <version>0.20.2</version>
 </dependency>
+
 
   </dependencies>
 
